fix overflow width

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
     width: 300px;
 }
 
-@media (max-width: 1200px) {
+@media (width: 1200px) {
  .header {
      font-size: 20px;
  }
@@ -131,8 +131,8 @@ body {
      margin-left: 90px;
      width: 400px;
  }
-body {
-    width: 100vw;
+html, body {
+    overflow-x: hidden;
 }
 
 }
